--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li>To master front-end and possibly back-end web development</li>
         <li>To build scalable and secure software applications</li>
         <li>To collaborate with fellow students and contribute to impactful projects.</li>
-        <li>To secure a role as a full-stack software engineer after the program</li>
+        <li>To secure a role as a full-stack software engineer after the program and be confident in this career</li>
     </ol>
     
     <p><a href="#top">Back to Top</a></p>
