update of media and table file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>My AltSchool Profile</title>
 </head>
 <body id="top">
+    <table>
+    <thead>
+        <th>
+            <p><a href="index.html">Home</a></p>
+        </th>
+        <th>         
+            <p><a href="table.html">Table</a></p>
+        </th>
+        <th>
+            <p><a href="media.html">Media</a></p>
+        </th>
+
+    </thead>
+    </table>
     <h1>Faith John</h1>
     <p><strong>AltSchool ID:</strong> ALT/SOE/25/3309</p>
 
